// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SoupController Sopa de letras irregular y multiples palabras a buscar POST /api/soup 1`] = `
Object {
  "AWDS": 0,
  "E4": 2,
  "EX": 9,
  "I": 3,
  "IX": 4,
  "IXE": 0,
  "O": 1,
  "OI": 3,
  "OIE": 3,
}
`;

exports[`SoupController matriz 1x1 palabra a buscar ["OIE"] POST /api/soup 1`] = `
Object {
  "OIE": 0,
}
`;

exports[`SoupController matriz 1x10 palabra a buscar ["OIE"] POST /api/soup 1`] = `
Object {
  "OIE": 4,
}
`;

exports[`SoupController matriz 3x3 palabra a buscar ["OIE"] POST /api/soup 1`] = `
Object {
  "OIE": 3,
}
`;

exports[`SoupController matriz 5x5 palabra a buscar ["OIE"] POST /api/soup 1`] = `
Object {
  "OIE": 8,
}
`;

exports[`SoupController matriz 7x2 palabra a buscar ["OIE"] POST /api/soup 1`] = `
Object {
  "OIE": 3,
}
`;
